--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -68,3 +68,9 @@ notification.levelup.message=Congratulazioni! Sei salito al livello {0}!
 
 notification.like.pull.title=Nuovo Like! ❤️
 notification.like.pull.message={0} ha messo mi piace al tuo pull di {1}
+
+# Social Likes Notifications
+notification.like.deck.title=Nuovo Like al Deck ❤️
+notification.like.deck.message={0} ha messo mi piace al tuo deck \"{1}\"
+notification.appreciation.profile.title=Nuovo Apprezzamento 🌟
+notification.appreciation.profile.message={0} ha apprezzato il tuo profilo!
