--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -68,3 +68,9 @@ notification.levelup.message=Congratulations! You reached level {0}!
 
 notification.like.pull.title=New Like! ❤️
 notification.like.pull.message={0} liked your {1} pull
+
+# Social Likes Notifications
+notification.like.deck.title=New Deck Like ❤️
+notification.like.deck.message={0} liked your deck \"{1}\"
+notification.appreciation.profile.title=New Appreciation 🌟
+notification.appreciation.profile.message={0} appreciated your profile!
