feat: Add notifications for profile and deck views, and deck imports

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -74,3 +74,11 @@ notification.like.deck.title=New Deck Like ❤️
 notification.like.deck.message={0} liked your deck \"{1}\"
 notification.appreciation.profile.title=New Appreciation 🌟
 notification.appreciation.profile.message={0} appreciated your profile!
+
+# View and Import Notifications
+notification.view.profile.title=Someone is viewing your profile! 👀
+notification.view.profile.message={0} is viewing your profile.
+notification.view.deck.title=Deck viewed! 🃏
+notification.view.deck.message={0} is viewing your deck \"{1}\".
+notification.import.deck.title=Deck imported! 📥
+notification.import.deck.message={0} just imported your deck \"{1}\".
