--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -74,3 +74,11 @@ notification.like.deck.title=Nuovo Like al Deck ❤️
 notification.like.deck.message={0} ha messo mi piace al tuo deck \"{1}\"
 notification.appreciation.profile.title=Nuovo Apprezzamento 🌟
 notification.appreciation.profile.message={0} ha apprezzato il tuo profilo!
+
+# View and Import Notifications
+notification.view.profile.title=Qualcuno guarda il tuo profilo! 👀
+notification.view.profile.message={0} sta visualizzando il tuo profilo.
+notification.view.deck.title=Mazzo visualizzato! 🃏
+notification.view.deck.message={0} sta guardando il tuo mazzo \"{1}\".
+notification.import.deck.title=Mazzo importato! 📥
+notification.import.deck.message={0} ha appena importato il tuo mazzo \"{1}\".
