feat: Enable users to apply referral codes post-registration, track who referred a user, and notify referrers when their code is used.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -68,3 +68,5 @@ notification.levelup.message=Congratulations! You reached level {0}!
 
 notification.like.pull.title=New Like! ❤️
 notification.like.pull.message={0} liked your {1} pull
+notification.referral.used.title=New referral! 🎉
+notification.referral.used.message={0} signed up using your invite code!
