--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -82,3 +82,5 @@ notification.view.deck.title=Deck viewed! 🃏
 notification.view.deck.message={0} is viewing your deck \"{1}\".
 notification.import.deck.title=Deck imported! 📥
 notification.import.deck.message={0} just imported your deck \"{1}\".
+notification.referral.used.title=New referral! 🎉
+notification.referral.used.message={0} signed up using your invite code!
