--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -82,3 +82,5 @@ notification.view.deck.title=Mazzo visualizzato! 🃏
 notification.view.deck.message={0} sta guardando il tuo mazzo \"{1}\".
 notification.import.deck.title=Mazzo importato! 📥
 notification.import.deck.message={0} ha appena importato il tuo mazzo \"{1}\".
+notification.referral.used.title=Nuovo referral! 🎉
+notification.referral.used.message={0} si è registrato con il tuo codice invito!
